# object_tracking1

./: README.md  example.bag
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: mot.pc  velodyne_driver.pc  velodyne_laserscan.pc  velodyne_msgs.pc  velodyne_pointcloud.pc
devel/lib/velodyne_driver/: velodyne_node
devel/lib/velodyne_laserscan/: velodyne_laserscan_node
devel/lib/velodyne_pointcloud/: cloud_node  transform_node
devel/share/mot/cmake/: motConfig.cmake
devel/share/roseus/ros/velodyne_msgs/: manifest.l
devel/share/velodyne_driver/cmake/: velodyne_driverConfig.cmake
devel/share/velodyne_laserscan/cmake/: velodyne_laserscanConfig.cmake
devel/share/velodyne_msgs/cmake/: velodyne_msgs-msg-extras.cmake  velodyne_msgs-msg-paths.cmake  velodyne_msgsConfig.cmake
devel/share/velodyne_pointcloud/cmake/: velodyne_pointcloudConfig.cmake
src/mot/: CMakeLists.txt  package.xml
src/mot/src/: clustering.cpp  ground_fit.cpp  kmeans.cpp  road_fit.cpp
